Added month specific search for appointment_simple
