# swagger/v1/swagger.yaml
@@ -159,6 +159,10 @@ paths:
         in: query
         schema:
           type: string
+      - name: month
+        in: query
+        schema:
+          type: string
       responses:
         '200':
           description: returns all doctor's appointments (only dates)
@@ -232,6 +236,10 @@ paths:
         schema:
           type: string
       - name: per_page
+        in: query
+        schema:
+          type: string
+      - name: month
         in: query
         schema:
           type: string
